# psplash_flying_logo

./: AUTHORS  Makefile.in  README.md  configure.ac  psplash-poky-img.h  psplash.c  psplash.h
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
